<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remote</string>
    <string name="pref_name">Preferences</string>
    
    <string name="title_settings">Settings</string>
	<string name="title_general">General</string>
	<string name="title_boxee">Boxee</string>
	<string name="title_telldus_live">Telldus Live</string>
	<string name="title_toggle_enabled">Toggle enabled</string>
	<string name="title_user">User</string>
	<string name="title_password">Password</string>
	<string name="summary_title_general">Summary general</string>
	<string name="summary_title_boxee">Summary boxee</string>
	<string name="summary_title_telldus_live">Summary telldus live</string>
	<string name="summary_title_toggle_enabled">Toggle enabled on and off</string>
	<string name="summary_title_user">Enter a user</string>
	<string name="summary_title_password">Enter a password</string>

	<string name="dialog_title_user">Enter a user</string>
	<string name="dialog_title_password">Enter a password</string>	    	
	
    
	<string name="remote_up">Up</string>
	<string name="remote_down">Down</string>
	<string name="remote_left">Left</string>
	<string name="remote_right">Right</string>
	<string name="remote_select">Select</string>
	<string name="remote_back">Back</string>
	
	    
	<string name="music_by">by</string>
	<string name="music_title_duration">Length:</string>
	<string name="music_title_genre">Genre:</string>
	<string name="music_title_year">Year:</string>
	<string name="music_title_album">Album:</string>
	
	    
	<string name="boxee_pair_dialog_message">Boxee needs to be paired with the remote. Write the digits displayed from your Boxee in the field below and then click Next.\n\nThis is a one time operation and to remove the pairing go to your boxee / settings / devices and click remove on the android remote.</string>    
	<string name="telldus_authentication_dialog_message">You need to create a access token with Telldus to use this function. The application won\'t save your password but only the access token which will be created. This token will then be used over multiple sessions.\n\nBy pressing continue you will be send to the internet browser and directed to login.telldus.com where you log in as normal.</string>

	<string name="telldus_live_authentication_succeeded">Telldus Live was added successfully</string>
	<string name="telldus_live_authentication_failed">Telldus Live authentication failed</string>    
	
	    
	<string name="telldus_live_add_device">Add</string>	    
	<string name="telldus_live_add_device_name">Name</string>
	<string name="telldus_live_add_device_type">Type</string>
	<string name="telldus_live_add_device_type_prompt">Choose device type</string>
	
	<string name="telldus_live_add_device_cancel_button">Cancel</string>
	<string name="telldus_live_add_device_submit_button">Submit</string>	    

	    
	<string name="button_continue">Continue</string>
	<string name="button_next">Next</string>
	<string name="button_cancel">Cancel</string>
	
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>	 

	
</resources>