<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.00"
		        android:text="@string/telldus_live_add_device_name" />

		    <EditText
		        android:id="@+id/telldus_live_add_device_name_edit_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.00">
		        <requestFocus />
		    </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
		    
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.00"
		        android:text="@string/telldus_live_add_device_type" />

		    <Spinner
		        android:id="@+id/telldus_live_add_device_type_spinner"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.00"
		        android:prompt="@string/telldus_live_add_device_type_prompt" />
		    
        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/telldus_live_add_device_submit_button"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/telldus_live_add_device_submit_button" />

        <Button
            android:id="@+id/telldus_live_add_device_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/telldus_live_add_device_submit_button"
            android:text="@string/telldus_live_add_device_cancel_button" />
            

    </RelativeLayout>

</LinearLayout>